--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial scale= 1.0">
-<title>Document</title>
 
-<link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Spooky Ghost</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div id="container"></div>
-<div id="spooky"></div>
-<div id="body"></div>
-<div id="eyes"></div>
-<div id="mouth"></div>
-<div id="feet"></div>
-<div></div>
-<div></div>
-<div></div>
-</div>
-</div>
-</div>
-<div id="shadow"></div>
-</div>
+    <div id="container">
+        <div id="spooky">
+            <div id="body">
+                <div id="eyes"></div>
+                <div id="mouth"></div>
+                <div id="feet">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        <div id="shadow"></div>
+    </div>
 
 </body>
+
 </html>
